--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-<h1>Yrochie V2 🔎</h1>
+<h1>Yrochie 🔎</h1>
 
 <div id="searchContainer">
   <input id="searchInput" type="text" placeholder="Recherche n'importe quoi..." autocomplete="off" />
