--- a/index.html
+++ b/index.html
@@ -2,319 +2,124 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yrochie</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    /* Reset & base */
-    * {
-      box-sizing: border-box;
-    }
     body {
+      background-color: #0f0f0f;
+      color: #e0e0e0;
+      font-family: Georgia, serif;
+      text-align: center;
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: url('https://www.transparenttextures.com/patterns/marble.png');
-      background-color: #fdfdfd;
-      background-size: cover;
-      color: #222;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-      cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" viewBox="0 0 32 32"><path fill="%23bfa046" d="M4 4 L28 16 L4 28 Z"/></svg>') 8 8, auto;
-      user-select: none;
+      padding: 0;
     }
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3.8rem;
-      font-weight: 500;
-      margin-bottom: 1rem;
-      letter-spacing: 2px;
-      color: #bfa046;
-      text-shadow:
-        0 0 10px rgba(191, 160, 70, 0.6),
-        0 0 20px rgba(191, 160, 70, 0.4);
-      opacity: 0;
-      animation: fadeInUp 1s forwards 0.3s;
+      font-size: 3rem;
+      margin-top: 40px;
     }
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px);}
-      to { opacity: 1; transform: translateY(0);}
+    input[type="text"] {
+      padding: 10px;
+      font-size: 1.2rem;
+      width: 60%;
+      max-width: 500px;
+      margin-top: 20px;
     }
-    .search-container {
-      width: 100%;
-      max-width: 700px;
-      position: relative;
-      margin-bottom: 2rem;
-      opacity: 0;
-      animation: fadeInUp 1s forwards 0.6s;
-      box-shadow:
-        0 8px 20px rgba(191,160,70,0.3);
-      border-radius: 50px;
-      background: linear-gradient(145deg, #fff, #eee);
-    }
-    .search-input {
-      width: 100%;
-      padding: 1rem 3rem 1rem 1.5rem;
-      font-size: 1.25rem;
-      border-radius: 50px;
-      border: 2.5px solid #bfa046;
-      outline: none;
-      background-color: #fffefc;
-      color: #222;
-      box-shadow:
-        inset 0 0 8px rgba(191, 160, 70, 0.15);
-      transition: background 0.3s, box-shadow 0.3s, border-color 0.3s;
-      font-weight: 600;
-      letter-spacing: 0.03em;
-    }
-    .search-input:focus {
-      background-color: #faf8f5;
-      box-shadow:
-        0 0 20px rgba(191, 160, 70, 0.5),
-        inset 0 0 12px rgba(191, 160, 70, 0.4);
-      border-color: #d4af37;
-    }
-    .search-button, .reset-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      border: none;
-      border-radius: 50%;
-      width: 44px;
-      height: 44px;
+    button {
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      margin-left: 10px;
       cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.3rem;
-      color: white;
-      box-shadow:
-        0 0 12px rgba(191, 160, 70, 0.7);
-      transition: box-shadow 0.3s ease, transform 0.15s ease;
-      background: linear-gradient(45deg, #d4af37, #b8860b);
-      text-shadow: 0 0 3px #fff4c1;
-      user-select: none;
-    }
-    .search-button:hover, .reset-button:hover {
-      box-shadow:
-        0 0 20px rgba(255, 215, 0, 0.9),
-        0 0 25px rgba(255, 223, 0, 0.8);
-      transform: translateY(-50%) scale(1.15);
-    }
-    .search-button {
-      right: 10px;
-    }
-    .reset-button {
-      left: -55px;
-      background: #555;
-      box-shadow:
-        0 0 10px rgba(0, 0, 0, 0.4);
-      display: none;
-      color: #f5f5f5;
-      font-weight: 700;
-      text-shadow: none;
-      user-select: none;
-    }
-    .reset-button:hover {
-      background: #a87f00;
-      color: white;
-      box-shadow:
-        0 0 25px #d4af37;
-    }
-    .tabs {
-      display: none;
-      justify-content: center;
-      margin: 2rem 0;
-      gap: 1.5rem;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-      user-select: none;
-    }
-    .tab {
-      padding: 0.7rem 1.8rem;
-      border-radius: 30px;
-      background-color: rgba(255, 255, 255, 0.75);
-      color: #bfa046;
-      font-weight: 700;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      border: 3px solid #bfa046;
-      box-shadow:
-        0 0 6px rgba(191,160,70,0.5);
-      user-select: none;
-      letter-spacing: 0.04em;
-      font-size: 1.1rem;
-    }
-    .tab.active,
-    .tab:hover {
-      background-color: #bfa046;
-      color: white;
-      box-shadow:
-        0 0 16px #ffd700,
-        0 0 28px #ffe600;
     }
     .results {
-      width: 100%;
-      max-width: 800px;
+      margin-top: 40px;
       display: grid;
-      gap: 1.25rem;
-      margin-top: 1rem;
-      opacity: 0;
-      animation: fadeInUp 0.7s forwards 1.2s;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 0 40px 40px;
     }
-    .result-card {
-      background-color: white;
-      border-radius: 1.2rem;
-      padding: 1.4rem 2rem;
-      box-shadow:
-        0 0 20px rgba(191,160,70,0.2);
-      border: 3px solid #bfa046;
-      cursor: pointer;
-      transition: box-shadow 0.4s ease, transform 0.3s ease;
-      user-select: text;
-      font-weight: 600;
-      font-size: 1.1rem;
+    .results img {
+      max-width: 100%;
+      border-radius: 10px;
     }
-    .result-card:hover {
-      box-shadow:
-        0 0 32px #ffd700,
-        0 0 40px #ffe600;
-      transform: translateY(-6px);
-    }
-    .result-card a {
-      color: #00468b;
-      text-decoration: none;
-      font-weight: 700;
-    }
-    .result-card a:hover {
-      text-decoration: underline;
-    }
-    .result-card p {
-      color: #333;
-      margin-top: 0.6rem;
-      font-weight: 500;
-      font-style: italic;
-      letter-spacing: 0.01em;
-    }
-    .placeholder-message {
-      color: #888;
-      font-style: italic;
-      margin-top: 3rem;
-      text-align: center;
-      font-size: 1.25rem;
-      user-select: none;
+    .popup {
+      margin-top: 20px;
+      background: #222;
+      border: 1px solid #444;
+      border-radius: 10px;
+      padding: 15px;
+      display: inline-block;
+      max-width: 90%;
     }
   </style>
 </head>
 <body>
-  <audio autoplay loop hidden>
-    <source src="https://cdn.pixabay.com/download/audio/2023/03/30/audio_b94eec0e4e.mp3?filename=luxury-fashion-143276.mp3" type="audio/mpeg" />
-  </audio>
   <h1>Yrochie</h1>
-  <div class="search-container" role="search">
-    <button class="reset-button" id="resetBtn" aria-label="Réinitialiser la recherche">✖</button>
-    <input
-      class="search-input"
-      id="searchInput"
-      type="search"
-      placeholder="Rechercher..."
-      aria-describedby="searchDescription"
-      autocomplete="off"
-      spellcheck="false"
-    />
-    <button class="search-button" id="searchBtn" aria-label="Lancer la recherche">🔍</button>
-  </div>
-  <div class="tabs" id="tabs" role="tablist" aria-label="Types de résultats">
-    <div class="tab active" data-tab="web" role="tab" tabindex="0" aria-selected="true" aria-controls="panel-web">Web</div>
-    <div class="tab" data-tab="images" role="tab" tabindex="-1" aria-selected="false" aria-controls="panel-images">Images</div>
-    <div class="tab" data-tab="videos" role="tab" tabindex="-1" aria-selected="false" aria-controls="panel-videos">Vidéos</div>
-  </div>
-  <div class="results" id="results" role="region" aria-live="polite" aria-atomic="true">
-    <div class="placeholder-message" id="placeholder">
-      Bienvenue sur le moteur de recherche <strong>Yrochie</strong>, élégance et efficacité réunies.
-    </div>
-  </div>
+  <input type="text" id="searchInput" placeholder="Tapez votre recherche...">
+  <button onclick="search()">Rechercher</button>
+
+  <div id="popup" class="popup" style="display: none;"></div>
+  <div class="results" id="imageResults"></div>
 
   <script>
-    const searchInput = document.getElementById('searchInput');
-    const searchBtn = document.getElementById('searchBtn');
-    const resetBtn = document.getElementById('resetBtn');
-    const resultsDiv = document.getElementById('results');
-    const tabs = document.getElementById('tabs');
-    const placeholder = document.getElementById('placeholder');
-    const tabElems = document.querySelectorAll('.tab');
+    const unsplashKey = 'didcv8FtmLtfyVyKAfjfyTjEDkwsSVzUaAuIpdCuSaU';
+    const limitGlobal = 1000;
+    let searchCount = 0;
 
-    function fadeInTabs() {
-      tabs.style.display = 'flex';
-      tabs.style.opacity = '1';
-    }
-    function fadeOutTabs() {
-      tabs.style.opacity = '0';
-      setTimeout(() => {
-        tabs.style.display = 'none';
-      }, 350);
-    }
-
-    function showResults(query) {
-      if (!query) return resetSearch();
-
-      fadeInTabs();
-      placeholder.style.display = 'none';
-      resetBtn.style.display = 'inline-flex';
-
-      const cleanUrl = query.startsWith('http') ? query : `https://www.google.com/search?q=${encodeURIComponent(query)}`;
-      const description = `"${query}" est un sujet très recherché sur Internet. Découvrez des informations, des actualités et des contenus variés à ce sujet.`;
-
-      resultsDiv.innerHTML = `
-        <div class="result-card" tabindex="0">
-          <a href="${cleanUrl}" target="_blank" rel="noopener noreferrer" >🔗 Résultat pour "${query}"</a>
-          <p>${description}</p>
-        </div>
-      `;
-    }
-
-    function triggerSearch() {
-      const query = searchInput.value.trim();
-      if (query.length > 0) {
-        showResults(query);
+    function search() {
+      const query = document.getElementById('searchInput').value.trim();
+      if (!query || searchCount >= limitGlobal) {
+        alert("Limite d'utilisation atteinte ou recherche invalide.");
+        return;
       }
+      searchCount++;
+      getDefinition(query);
+      getImages(query);
     }
 
-    function resetSearch() {
-      searchInput.value = '';
-      resultsDiv.innerHTML = '<div class="placeholder-message" id="placeholder">Bienvenue sur le moteur de recherche <strong>Yrochie</strong>, élégance et efficacité réunies.</div>';
-      fadeOutTabs();
-      resetBtn.style.display = 'none';
-      searchInput.focus();
+    function getDefinition(query) {
+      const popup = document.getElementById('popup');
+      popup.style.display = 'none';
+      fetch(`https://api.duckduckgo.com/?q=${encodeURIComponent(query)}&format=json&no_html=1&skip_disambig=0`)
+        .then(res => res.json())
+        .then(data => {
+          if (data.AbstractText) {
+            popup.innerText = data.AbstractText;
+            popup.style.display = 'inline-block';
+          }
+        })
+        .catch(err => console.error('Erreur définition:', err));
     }
 
-    searchBtn.addEventListener('click', triggerSearch);
-    resetBtn.addEventListener('click', resetSearch);
-    searchInput.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') {
-        triggerSearch();
-      }
-    });
-
-    tabElems.forEach((tab) => {
-      tab.addEventListener('click', () => {
-        tabElems.forEach((t) => t.classList.remove('active'));
-        tab.classList.add('active');
-      });
-      tab.addEventListener('keydown', (e) => {
-        if (e.key === 'ArrowRight') {
-          const next = tab.nextElementSibling || tabElems[0];
-          next.focus();
-        } else if (e.key === 'ArrowLeft') {
-          const prev = tab.previousElementSibling || tabElems[tabElems.length - 1];
-          prev.focus();
-        } else if (e.key === 'Enter' || e.key === ' ') {
-          tab.click();
-        }
-      });
-    });
+    function getImages(query) {
+      const imageResults = document.getElementById('imageResults');
+      imageResults.innerHTML = '<p>Chargement des images...</p>';
+      fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&client_id=${unsplashKey}&per_page=15`)
+        .then(res => res.json())
+        .then(unsplashData => {
+          let imagesHTML = '';
+          const keywords = [query.toLowerCase(), 'chat', 'cat', 'feline', 'kitty'];
+          for (const img of unsplashData.results) {
+            const alt = (img.alt_description || '').toLowerCase();
+            const tags = img.tags?.map(tag => tag.title?.toLowerCase()) || [];
+            const isRelevant = keywords.some(k => alt.includes(k) || tags.includes(k));
+            if (isRelevant && img.urls?.small && img.links?.html) {
+              imagesHTML += `
+                <a href="${img.links.html}" target="_blank" rel="noopener noreferrer" title="${img.alt_description || 'Image'}">
+                  <img src="${img.urls.small}" alt="${img.alt_description || 'Image'}" loading="lazy" />
+                </a>
+              `;
+            }
+          }
+          if (!imagesHTML) {
+            imagesHTML = '<p>Aucune image pertinente trouvée.</p>';
+          }
+          imageResults.innerHTML = imagesHTML;
+        })
+        .catch(err => {
+          console.error('Erreur images:', err);
+          imageResults.innerHTML = '<p>Erreur lors du chargement des images.</p>';
+        });
+    }
   </script>
 </body>
 </html>
-
