--- a/index.html
+++ b/index.html
@@ -1,123 +1,133 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yrochie</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yrochie - Moteur de recherche</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
-      background-color: #0f0f0f;
-      color: #e0e0e0;
-      font-family: Georgia, serif;
-      text-align: center;
+      background-color: #f5f5f5;
+      font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
+      color: #222;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      text-align: center;
     }
     h1 {
       font-size: 3rem;
-      margin-top: 40px;
+      margin-bottom: 1rem;
+      color: #333;
     }
     input[type="text"] {
-      padding: 10px;
+      width: 70%;
+      padding: 0.5rem;
       font-size: 1.2rem;
-      width: 60%;
-      max-width: 500px;
-      margin-top: 20px;
     }
     button {
-      padding: 10px 20px;
+      padding: 0.5rem 1rem;
       font-size: 1.2rem;
-      margin-left: 10px;
+      margin-left: 0.5rem;
       cursor: pointer;
     }
-    .results {
-      margin-top: 40px;
+    #definition {
+      margin-top: 2rem;
+      text-align: left;
+      background: #fff;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    #definition h2 {
+      font-size: 1.5rem;
+      color: #000;
+      margin-bottom: 0.5rem;
+    }
+    #images {
+      margin-top: 2rem;
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 0 40px 40px;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 1rem;
     }
-    .results img {
-      max-width: 100%;
+    #images img {
+      width: 100%;
       border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
-    .popup {
-      margin-top: 20px;
-      background: #222;
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 15px;
-      display: inline-block;
-      max-width: 90%;
+    #quota-warning {
+      color: red;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-  <h1>Yrochie</h1>
-  <input type="text" id="searchInput" placeholder="Tapez votre recherche...">
-  <button onclick="search()">Rechercher</button>
-
-  <div id="popup" class="popup" style="display: none;"></div>
-  <div class="results" id="imageResults"></div>
+  <audio id="background-music" src="musique.mp3" autoplay loop></audio>
+  <div class="container">
+    <h1>Yrochie</h1>
+    <input type="text" id="searchInput" placeholder="Rechercher...">
+    <button onclick="launchSearch()">Rechercher</button>
+    <div id="quota-warning" class="hidden">Limite d'utilisation atteinte. Réessayez demain.</div>
+    <div id="resultSection">
+      <div id="definition"></div>
+      <div id="images"></div>
+    </div>
+  </div>
 
   <script>
-    const unsplashKey = 'didcv8FtmLtfyVyKAfjfyTjEDkwsSVzUaAuIpdCuSaU';
-    const limitGlobal = 1000;
-    let searchCount = 0;
+    const QUOTA_LIMIT = 5000;
+    let searchCount = localStorage.getItem('searchCount') || 0;
+    const warning = document.getElementById('quota-warning');
 
-    function search() {
-      const query = document.getElementById('searchInput').value.trim();
-      if (!query || searchCount >= limitGlobal) {
-        alert("Limite d'utilisation atteinte ou recherche invalide.");
+    function translateQuery(query) {
+      return fetch(`https://api.mymemory.translated.net/get?q=${encodeURIComponent(query)}&langpair=fr|en`)
+        .then(response => response.json())
+        .then(data => data.responseData.translatedText.toLowerCase());
+    }
+
+    async function launchSearch() {
+      if (searchCount >= QUOTA_LIMIT) {
+        warning.classList.remove('hidden');
         return;
       }
+      const input = document.getElementById('searchInput').value;
+      const englishQuery = await translateQuery(input);
+      getDefinition(input);
+      getImages(englishQuery);
       searchCount++;
-      getDefinition(query);
-      getImages(query);
+      localStorage.setItem('searchCount', searchCount);
     }
 
     function getDefinition(query) {
-      const popup = document.getElementById('popup');
-      popup.style.display = 'none';
       fetch(`https://api.duckduckgo.com/?q=${encodeURIComponent(query)}&format=json&no_html=1&skip_disambig=0`)
-        .then(res => res.json())
+        .then(response => response.json())
         .then(data => {
+          const defDiv = document.getElementById('definition');
           if (data.AbstractText) {
-            popup.innerText = data.AbstractText;
-            popup.style.display = 'inline-block';
+            defDiv.innerHTML = `<h2>Définition :</h2><p>${data.AbstractText}</p>`;
+          } else {
+            defDiv.innerHTML = `<h2>Définition :</h2><p>Aucune définition trouvée.</p>`;
           }
-        })
-        .catch(err => console.error('Erreur définition:', err));
+        });
     }
 
     function getImages(query) {
-      const imageResults = document.getElementById('imageResults');
-      imageResults.innerHTML = '<p>Chargement des images...</p>';
-      fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&client_id=${unsplashKey}&per_page=15`)
-        .then(res => res.json())
-        .then(unsplashData => {
-          let imagesHTML = '';
-          const keywords = [query.toLowerCase(), 'chat', 'cat', 'feline', 'kitty'];
-          for (const img of unsplashData.results) {
-            const alt = (img.alt_description || '').toLowerCase();
-            const tags = img.tags?.map(tag => tag.title?.toLowerCase()) || [];
-            const isRelevant = keywords.some(k => alt.includes(k) || tags.includes(k));
-            if (isRelevant && img.urls?.small && img.links?.html) {
-              imagesHTML += `
-                <a href="${img.links.html}" target="_blank" rel="noopener noreferrer" title="${img.alt_description || 'Image'}">
-                  <img src="${img.urls.small}" alt="${img.alt_description || 'Image'}" loading="lazy" />
-                </a>
-              `;
-            }
+      fetch(`https://api.unsplash.com/search/photos?query=${query}&client_id=didcv8FtmLtfyVyKAfjfyTjEDkwsSVzUaAuIpdCuSaU`)
+        .then(response => response.json())
+        .then(data => {
+          const imagesDiv = document.getElementById('images');
+          imagesDiv.innerHTML = '';
+          if (data.results && data.results.length > 0) {
+            data.results.forEach(img => {
+              imagesDiv.innerHTML += `<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${img.alt_description}"></a>`;
+            });
+          } else {
+            imagesDiv.innerHTML = '<p>Aucune image trouvée.</p>';
           }
-          if (!imagesHTML) {
-            imagesHTML = '<p>Aucune image pertinente trouvée.</p>';
-          }
-          imageResults.innerHTML = imagesHTML;
-        })
-        .catch(err => {
-          console.error('Erreur images:', err);
-          imageResults.innerHTML = '<p>Erreur lors du chargement des images.</p>';
         });
     }
   </script>
